# paper-digest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  config.example.toml  config.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labels.json  pull_request_template.md  release.yml
docs/: branch-protection-policy.md  compatibility-matrix.md  config-recipes.md  dependency-policy.md  discussions-policy.md  issue-triage.md  label-taxonomy.md  maintainer-access-policy.md  maintainer-guide.md  maintainer-operations-hub.md  maintainer-rotation.md  operations-history.md  post-release-checklist.md  quarterly-maintainer-review.md  release-cadence-policy.md  release-lifecycle-runbook.md  repository-settings-checklist.md  review-policy.md  roadmap-policy.md  ruleset-policy.md  saved-replies.md
examples/: feishu-lm-arxiv.toml
paper_digest/: archive_site.py  cli.py  crossref_client.py  digest.py  discord_delivery.py  network.py  telegram_delivery.py
tests/: policy_assertions.py  test___main__.py  test_analysis_additional.py  test_archive_backfill_additional.py  test_archive_site_additional.py  test_arxiv_client.py  test_arxiv_client_additional.py  test_check_docs.py  test_check_docs_entrypoint.py  test_check_policies.py  test_check_workflows.py  test_cli_additional.py  test_community_pr_labels.py  test_community_triage.py  test_config_additional.py  test_config_examples.py  test_contributor_release_label_policy.py  test_crossref_client_additional.py  test_delivery_additional.py  test_delivery_client_helpers.py  test_digest.py  test_digest_additional.py  test_docs_assertions.py  test_docs_check_pr_comment.py  test_docs_check_pr_comment_workflow.py  test_docs_contracts.py  test_docs_links.py  test_docs_pipeline.py  test_docs_sources.py  test_email_delivery.py  test_feedback_additional.py  test_github_action_state_additional.py  test_github_api.py  test_github_feedback_additional.py  test_github_resources.py  test_github_services.py  test_install_actionlint.py  test_intake_policy_base.py  test_issue_form_policy.py  test_issue_intake_policy.py  (+34 more)
tools/: __init__.py  check_docs.py  check_policies.py  check_workflows.py  docs_links.py  (+40 more)
(+25 files in other folders)
